--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/FMS/perf.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/FMS/perf.scss
@@ -132,6 +132,7 @@
   text-align: right;
   align-self: center;
   background-color: #040404;
+  padding: 0px 2px 0px 2px;
 }
 
 .mfd-fms-perf-appr-flap-speeds {
