message area & message list now functional; enable "FROM P.POS DIR TO" revisions menu entry; implement DisplayInterface

--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
@@ -610,3 +610,13 @@ $display-mfd-dark-grey: #3c3c3c;
   border-top: 2px solid $display-mfd-dark-grey;
   padding: 5px;
 }
+
+.mfd-footer-message-area {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 15px;
+  font-size: 26px;
+  color: $display-white;
+  font-family: "Ecam", monospace;
+}
