bugfix FOB; refactor fpln revision information

--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/FMS/F-PLN/f-pln.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/FMS/F-PLN/f-pln.scss
@@ -11,6 +11,10 @@
   align-items: center;
 }
 
+.mfd-fms-yellow-text {
+  color: $display-yellow;
+}
+
 .mfd-fms-fpln-line-secondary > div > .mfd-fms-fpln-line-annotation,
 .mfd-fms-fpln-line-secondary > div > .mfd-fms-fpln-line-ident,
 .mfd-fms-fpln-line-secondary > .mfd-fms-fpln-label-small,
