add DIRECT TO page

--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/FMS/fuel_load.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/FMS/fuel_load.scss
@@ -41,3 +41,9 @@
   align-self: center;
   margin-bottom: 10px;
 }
+
+.mfd-fms-fuel-load-dest-grid-efob-cell {
+  align-self: center;
+  justify-content: center;
+  margin-bottom: 10px;
+}
