move direct-to styles to css

--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/FMS/F-PLN/f-pln.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/FMS/F-PLN/f-pln.scss
@@ -320,3 +320,9 @@
 .mfd-fms-fpln-duplicate-table-row > div.sel {
   background-color: $display-grey;
 }
+
+.mfd-fms-bottom-button-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
