--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
@@ -636,3 +636,13 @@ $display-mfd-dark-grey: #3c3c3c;
   color: $display-white;
   font-family: "Ecam", monospace;
 }
+
+.fr {
+  display: flex;
+  flex-direction: row;
+}
+
+.fc {
+  display: flex;
+  flex-direction: column;
+}
