--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
@@ -63,10 +63,12 @@ $display-mfd-dark-grey: #3c3c3c;
 
 .mfd-value-tmpy {
   color: $display-yellow;
+  font-size: 25px;
 }
 
 .mfd-value-sec {
   color: $display-white;
+  font-size: 25px;
 }
 
 .mfd-button {
