add VERT REV SPD

--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
@@ -30,6 +30,10 @@ $display-mfd-dark-grey: #3c3c3c;
   color: $display-green;
 }
 
+.mfd-label.amber {
+  color: $display-amber;
+}
+
 .mfd-label.bigger {
   font-size: 24px;
 }
