feat: further ui fixes

--- a/fbw-a32nx/src/systems/instruments/src/OANC/Components/DropdownMenu.scss
+++ b/fbw-a32nx/src/systems/instruments/src/OANC/Components/DropdownMenu.scss
@@ -4,7 +4,7 @@
 
 @import "../../Common/definitions";
 
-$display-mfd-dark-grey: magenta;
+$display-mfd-dark-grey: rgb(128, 128, 128);
 $display-light-grey: gray;
 
 .mfd-dropdown-container {
