upgrade common folder

--- a/fbw-a380x/src/systems/instruments/src/Common/common.scss
+++ b/fbw-a380x/src/systems/instruments/src/Common/common.scss
@@ -19,3 +19,19 @@
   text-anchor: middle;
   font-family: "Ecam", monospace;
 }
+
+.T1 {
+  font-size: 17px;
+}
+
+.T2 {
+  font-size: 21px;
+}
+
+.T3 {
+  font-size: 24px;
+}
+
+.T4 {
+  font-size: 26px;
+}
