--- a/fbw-a380x/src/systems/instruments/src/PFD/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/PFD/style.scss
@@ -149,6 +149,10 @@ text.Magenta {
   fill: none;
   stroke: $display-cyan;
 }
+.Cyan.Fill.Stroke {
+  fill: $display-cyan;
+  stroke: $display-cyan;
+}
 text.Cyan {
   fill: $display-cyan;
   stroke: none;
@@ -170,6 +174,10 @@ tspan.Cyan {
 .White.Fill {
   fill: $display-white;
   stroke: none;
+}
+.White.Fill.Stroke {
+  fill: $display-white;
+  stroke: $display-white;
 }
 text.White {
   fill: $display-white;
@@ -259,7 +267,7 @@ text.Red {
   display: none;
 }
 
-.BacklightBleed {
+/* .BacklightBleed {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -267,4 +275,4 @@ text.Red {
   opacity: 0.75;
   background-color: rgba(0, 0, 255, 0.025);
   box-shadow: inset 0px 0px 30px 10px rgba(0, 75, 255, 0.04);
-}
+} */
