fix(sd): add missing Grey Fill class selector

--- a/fbw-a380x/src/systems/instruments/src/index.scss
+++ b/fbw-a380x/src/systems/instruments/src/index.scss
@@ -114,6 +114,11 @@ tspan.Grey,
     fill: $display-grey;
 }
 
+.Grey.Fill {
+    stroke: none;
+    fill: $display-grey;
+}
+
 .DarkGrey {
     stroke: $display-dark-grey;
 }
