--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/FMS/DATA/status.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/FMS/DATA/status.scss
@@ -14,3 +14,42 @@
   align-items: center;
   margin-bottom: 20px;
 }
+
+.mfd-data-status-airframe-label {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+.mfd-data-status-first-section {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding-bottom: 15px;
+  border-bottom: 2px solid $display-light-grey;
+}
+
+.mfd-data-status-second-section {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding-bottom: 15px;
+  padding-top: 15px;
+  border-bottom: 2px solid $display-light-grey;
+}
+
+.mfd-data-status-third-section {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding-top: 25px;
+}
