feat(a380-sd): A380 HYD page rework (#8354)
* feat(380-sd): rework hyd page

* fix(a380-sd): use correct Lvars for hydraulic pump pressure switches

* feat(1380-sd): increase most stroke widths to SW4

* feat(a380-sd): correctly use both pressure switch and value for system label color

* feat(a380-sd): improve engine pump indication conditions and DISC visual

* feat(a380-sd): use N3 for engine running, hide ELEC PMP indication when any engine running

* feat(1380-sd): improve elec pump indications, add line to circuit box

* feat(a380-sd): improve reservoir indications and fail flags

* fix(1380-sd): fix condition for engine pump indication

* feat(a380-sd): improve graphics of elec pump triangle

* feat(a380-sd): add text outline for bold text to HYD page

--- a/fbw-a380x/src/systems/instruments/src/index.scss
+++ b/fbw-a380x/src/systems/instruments/src/index.scss
@@ -57,6 +57,10 @@
 
 text.Green,
 tspan.Green,
+.GreenFill {
+    fill: $display-green;
+}
+
 .Green.Fill {
     stroke: none;
     fill: $display-green;
@@ -86,6 +90,7 @@ tspan.White,
 .White.Fill {
     stroke: none;
     fill: $display-white;
+    color: $display-white;
 }
 
 .LightGrey {
@@ -135,6 +140,11 @@ tspan.DarkGrey,
 
 text.Amber,
 tspan.Amber,
+.AmberFill {
+    fill: $display-amber;
+    color: $display-amber;
+}
+
 .Amber.Fill {
     stroke: none;
     fill: $display-amber;
@@ -271,6 +281,13 @@ tspan.Transparent,
 
 .WS-10 {
     word-spacing: -10px !important;
+}
+
+.TextOutline2 {
+    stroke-width: 2px;
+    // currentColor uses the color attribute, so we need to add that to the classes specifying the colors
+    // Important is necessary as some color classes specify stroke:none
+    stroke: currentColor !important;
 }
 
 .MiddleAlign {
