Added/Updated Copywrite in base files

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/html_ui/Pages/VCockpit/Instruments/LegacyA380X/FCU/A380_FCU.css
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/html_ui/Pages/VCockpit/Instruments/LegacyA380X/FCU/A380_FCU.css
@@ -1,4 +1,7 @@
-﻿:root {
+﻿/* Copyright (c) 2023-2024 FlyByWire Simulations */
+/* SPDX-License-Identifier: GPL-3.0 */
+
+:root {
   --bodyHeightScale: 1;
 }
 
