fpln page and msg list improvements

--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
@@ -674,7 +674,7 @@ $display-mfd-dark-grey: #3c3c3c;
   align-items: center;
   margin-left: 15px;
   font-size: 26px;
-  color: $display-white;
+  color: $display-background;
   font-family: "Ecam", monospace;
 }
 
