--- a/fbw-a380x/src/systems/instruments/src/Common/definitions.scss
+++ b/fbw-a380x/src/systems/instruments/src/Common/definitions.scss
@@ -21,5 +21,6 @@ $display-green: #00ff00;
 $display-magenta: #ff94ff;
 $display-red: #ff0000;
 $display-yellow: #ffff00;
+$display-dark-blue: rgb(12, 102, 247);
 
-$display-background: #040405;
+$display-background: #040404;
