--- a/fbw-a380x/src/systems/instruments/src/index.scss
+++ b/fbw-a380x/src/systems/instruments/src/index.scss
@@ -32,7 +32,7 @@
 
 .main-svg {
     width: 100%;
-    background-color: #0a0a0a;
+    background-color: $display-background;
     transform: translateY(10px);
 }
 
