set #000 as background color for all remaining instruments for a380

--- a/fbw-a380x/src/systems/instruments/src/MsfsAvionicsCommon/definitions.scss
+++ b/fbw-a380x/src/systems/instruments/src/MsfsAvionicsCommon/definitions.scss
@@ -17,5 +17,6 @@ $display-magenta: #ff94ff;
 $display-red: #ff0000;
 $display-yellow: #ffff00;
 $display-dark-blue: rgb(12, 102, 247);
+$display-mfd-darker-grey: #3c3c3c;
 
-$display-background: #040404;
+$display-background: #000000;
